Fix some background colors for dark mode

--- a/frontend/src/styles/global.scss
+++ b/frontend/src/styles/global.scss
@@ -617,6 +617,7 @@ body {
         --default: var(--text-3000);
         --muted: var(--muted-3000);
         --border: var(--border-3000);
+        --light: var(--bg-3000);
         --bg-mid: var(--bg-3000);
         background: var(--bg-3000);
     }
